--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-json-excel",
-  "version": "0.3.0",
+  "name": "@carloscgo/vue-json-excel",
+  "version": "0.3.1",
   "description": "Download your JSON as an excel or CSV file directly from the browser",
   "main": "JsonExcel.vue",
   "scripts": {
